🎏 Added a class that get the env variable of golang. The project is fully functional on Windows.